hsm should be enterprise only

--- a/docs/pages/enterprise/hsm.mdx
+++ b/docs/pages/enterprise/hsm.mdx
@@ -11,7 +11,7 @@ This section will cover:
 
 ## Prerequisites
 
-- Teleport v(=teleport.version=) Open Source or Enterprise (self-hosted).
+- Teleport v(=teleport.version=) Enterprise self-hosted.
 - An HSM reachable from your Teleport auth server.
 - The PKCS#11 module for your HSM.
 
