--- a/docs/pages/docs/best-practices.mdx
+++ b/docs/pages/docs/best-practices.mdx
@@ -121,6 +121,35 @@ The rest are subject to final approval by the developer relations team. In gener
 - These are often helpful for new hires since they can simultaneously be reading and learning the material while performing basic editing.
 - Consistent and helpful styling has an impact on customer satisfaction. Small stylistic changes can improve the efficacy of docs. It's a lot easier to find that *one, crucial, config value* if it's bolded or highlighted.
 
+### List types
+
+Reference the following table for guidance on styling common list types. 
+
+| List type | Usage | 
+|----------------|--------------------------------------------------------------------------------|
+| Numbered list  | Steps to be performed in the listed numerical order. <br>                      |
+                   For example:
+                   ``` 1. Log in
+                       2. Click Add Server
+                       3. And so on
+                   ```
+                   Lowercase letters should be used for nexted sequencial steps. 
+                   For example:
+                   ``` 1. Log in
+                          a. nested step 1.
+                          b. nested step 2.
+                          c. nexted step 3. 
+                   ```
+| Header list    | For use when numbered list steps must be broken into larger sections.               |
+                   Header lists should be styled to indicate the current step as well as the number of 
+                   steps remaining. 
+                
+                   For example:
+                       ### Step 1/3
+                       ### Step 2/3
+                       ### Step 3/3
+
+
 ## Testing
 
 1. Make sure to manually test commands and steps!
