--- a/docs/pages/setup/guides/fluentd.mdx
+++ b/docs/pages/setup/guides/fluentd.mdx
@@ -51,7 +51,6 @@ and forwards them to fluentd.
   </TabItem>
 </Tabs>
 
-
 ## Step 2/6. Generate configuration
 
 Run `configure` command to generate sample configuration. Replace `teleport.example.com:443`
@@ -155,9 +154,9 @@ version: v4
 metadata:
   name: teleport-event-handler-impersonator
 spec:
-  # SSH options used for user sessions 
+  # SSH options used for user sessions
   options:
-    # max_session_ttl defines the TTL (time to live) of SSH certificates 
+    # max_session_ttl defines the TTL (time to live) of SSH certificates
     # issued to the users with this role.
     max_session_ttl: 10h
 
@@ -165,14 +164,8 @@ spec:
   # allowed for the users of this role. by default nothing is allowed.
   allow:
     impersonate:
-      users: ['teleport-event-handler']
-      roles: ['teleport-event-handler']
-
-  # the deny section uses the identical format as the 'allow' section.
-  # the deny rules always override allow rules.
-  deny:
-    node_labels:
-      '*': '*'
+      users: ["teleport-event-handler"]
+      roles: ["teleport-event-handler"]
 ```
 
 ```code
@@ -191,7 +184,6 @@ $ tctl create -f out.yaml
 
 Re-login to assume the new role and try to issue certificate for the teleport-event-handle user again.
 </Admonition>
-
 
 ## Step 5/6. Start fluentd forwarder
 
