Update U2F App ID guidance in documentation
1. Do not include port 443 in the App ID; this is the correct
   recommendation, plus including it causes issues with Chrome
2. Standardize facet recommendations

See https://github.com/gravitational/teleport/issues/8017 for more
details about (1).

--- a/docs/pages/setup/admin/github-sso.mdx
+++ b/docs/pages/setup/admin/github-sso.mdx
@@ -101,6 +101,7 @@ Configure Teleport Auth Service Github for authentication:
       facets:
       - 'https://example.teleport.sh:443'
       - 'https://example.teleport.sh'
+      - 'example.teleport.sh:443'
       - 'example.teleport.sh'
   version: v2
   ```
