--- a/docs/pages/setup/reference/authentication.mdx
+++ b/docs/pages/setup/reference/authentication.mdx
@@ -49,6 +49,7 @@ You can modify these settings in the static config `teleport.yaml`  or using dyn
       facets:
       - 'https://example.teleport.sh:443'
       - 'https://example.teleport.sh'
+      - 'example.teleport.sh:443'
       - 'example.teleport.sh'
   version: v2
   ```
