--- a/docs/pages/setup/reference/config.mdx
+++ b/docs/pages/setup/reference/config.mdx
@@ -203,7 +203,12 @@ auth_service:
         # this section is used if second_factor is set to 'u2f'
         u2f:
             # public address of the Teleport proxy, _including_ the `https://`
-            # prefix and port number.
+            # prefix. If you use a port number other than 443, include it as
+            # well.
+            #
+            # Examples:
+            # - "https://example.com" (uses default port 443)
+            # - "https://example.com:3080" (uses non-default port 3080)
             #
             # IMPORTANT: app_id must never change in the lifetime of the
             # cluster, because it's recorded in the registration data on the
