Fix u2f.device_attestation_cas in Terraform docs

--- a/docs/pages/setup/reference/terraform-provider.mdx
+++ b/docs/pages/setup/reference/terraform-provider.mdx
@@ -451,7 +451,7 @@ Spec contains parameters of a resource.
 | `u2f`                        | set         | U2F defines settings for U2F device                                           |
 | `u2f.app_id`                 | string      | The application ID for universal second factor                                |
 | `u2f.facets`                 | string list | The facets for universal second factor                                        |
-| `u2f.device_attestation_c_as | string list | Trusted attestation CAs for U2F  devices                                      |
+| `u2f.device_attestation_cas` | string list | Trusted attestation CAs for U2F  devices                                      |
 | `require_session_mfa`        | bool        | Causes all sessions in this cluster to require MFA  checks                    |
 | `disconnect_expired_cert`    | bool        | If true, connections with expired client certificates will get disconnected   |
 | `allow_local_auth`           | bool        | If true, local authentication is enabled                                      |
