--- a/docs/pages/preview/upcoming-releases.mdx
+++ b/docs/pages/preview/upcoming-releases.mdx
@@ -8,26 +8,17 @@ The teleport team delivers a new major release roughly every 3 months.
 
 ## Teleport
 
-### Teleport 7.2
+### Teleport 8.0
 
-Teleport 7.2 will focus on [HSMs](https://github.com/gravitational/teleport/issues/4225), [improving `tsh.exe` experience on Windows](https://github.com/gravitational/teleport/issues/7445), and performance and stability enhancements.
+Teleport 8.0 will add Desktop Access with initial support for Windows, port consolidation using TLS routing to simplify deployment, AWS CLI access through Application Access, automatic discovery of applications and databases, Webauthn for per-session MFA, and account recovery.
 
-You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/60).
+| Version                                                                                | Date                | Description                            |
+| -------------------------------------------------------------------------------------- | ------------------- | -------------------------------------- |
+| [8.0.0-alpha.1](https://github.com/gravitational/teleport/releases/tag/v8.0.0-alpha.1) | October 6th, 2021   | Only for pre-production envioronments. |
+| 8.0.0-beta.1                                                                           | October 25th, 2021  | Only for pre-production envioronments. |
+| Release                                                                                | November 15th, 2021 | Production release.                    |
 
-| Version                                                                               | Date                | Description                            |
-| ------------------------------------------------------------------------------------- | ------------------- | -------------------------------------- |
-| [7.2.0-beta.1](https://github.com/gravitational/teleport/releases/tag/v7.2.0-beta.1)  | August 19th, 2021   | Only for pre-production envioronments. |
-| Release                                                                               | September 20th, 2021 | Production release.                    |
-
-### Teleport 7.3
-
-Teleport 7.3 will focus on [simplified node joining](https://github.com/gravitational/teleport/issues/7145).
-
-| Version    | Date              | Description         |
-| ---------- | ----------------- | ------------------- |
-| Release    | October 4th, 2021 | Production release. |
-
-You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/62).
+You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/59).
 
 ## Teleport Cloud "Washington"
 
