updated to use scopes

--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -20,7 +20,7 @@ Teleport (=teleport.version=) on Linux machines.
 (!docs/pages/includes/permission-warning.mdx!)
 
 <Tabs>
-  <TabItem label="Community">
+  <TabItem label="OpenSource"  scope={["oss"]}>
   <Tabs>
     <TabItem label="Amazon Linux 2/RHEL (RPM)">
       ```code
@@ -71,7 +71,7 @@ Teleport (=teleport.version=) on Linux machines.
 
     </Tabs>
   </TabItem>
-  <TabItem label="Enterprise">
+  <TabItem label="Enterprise"  scope={["enterprise"]}>
   The Teleport Enterprise license file, `license.pem`, is required as part of the installation.
 
   <Tabs>
@@ -223,7 +223,7 @@ Here's a selection of compatible two-factor authentication apps:
 ### Install a Teleport client locally
 
 <Tabs>
-  <TabItem label="Community">
+  <TabItem label="OpenSource"  scope={["oss"]}>
 
 <Tabs>
   <TabItem label="Mac">
@@ -265,7 +265,7 @@ Here's a selection of compatible two-factor authentication apps:
   </TabItem>
 </Tabs>
   </TabItem>
-  <TabItem label="Enterprise">
+  <TabItem label="Enterprise"  scope={["enterprise"]}>
   <Tabs>
     <TabItem label="Mac">
       [Download Enterprise MacOS .pkg installer](https://get.gravitational.com/teleport-ent-(=teleport.version=).pkg), double-click to run the installer.
