--- a/docs/pages/kubernetes-access/getting-started/agent.mdx
+++ b/docs/pages/kubernetes-access/getting-started/agent.mdx
@@ -16,6 +16,16 @@ This guide works for Open Source and Enterprise, self-hosted or cloud-hosted edi
 
 (!docs/pages/includes/tctl.mdx!)
 
+<Admonition type="notice" title="Enable Kubernetes for Self-Hosted">
+For self-hosted Teleport instances the `kube_listen_addr` setting in the `proxy_service` is required to enable Kubernetes Access.  This is already enabled for Cloud and the Teleport `teleport-cluster` helm chart.
+```yaml
+proxy_service:
+  # ...
+  public_addr: proxy.example.com:3080
+  kube_listen_addr: 0.0.0.0:3026  
+  ```  
+</Admonition>
+
 ## Deployment overview
 
 In this guide, we deploy a Teleport agent that connects kubernetes cluster `cookie` to
