Added joining nodes in AWS documentation.

--- a/docs/pages/setup/guides.mdx
+++ b/docs/pages/setup/guides.mdx
@@ -17,4 +17,7 @@ layout: tocless-doc
   <li>
     [EC2 tags as Teleport Nodes](./guides/ec2-tags.mdx). How to setup Teleport node labels based on EC2 tags.
   </li>
+  <li>
+    [Joining Nodes in AWS](./guides/joining-nodes-aws.mdx). How to join nodes and proxies on EC2.
+  </li>
 </ul>
