Apply suggestions from code review
Co-authored-by: Isaiah Becker-Mayer <isaiah@goteleport.com>

--- a/docs/pages/desktop-access/introduction.mdx
+++ b/docs/pages/desktop-access/introduction.mdx
@@ -21,10 +21,10 @@ description: Teleport Desktop Access introduction and resources.
 
 # Desktop Access
 
-Teleport protects graphical desktop access to remote hosts. With Teleport
+Teleport manages graphical desktop access to remote hosts. With Teleport
 Desktop Access, you get:
 
-- Password-less login experience backed by strong cryptographic
+- A password-less login experience backed by strong cryptographic
   authentication.
 - Role-based access control (RBAC) for groups of hosts and users.
 - Audit log and recording of all desktop connections.
@@ -63,5 +63,5 @@ Desktop Access related configuration and CLI commands.
 
 ## Troubleshooting
 
-If you hit any issues, check out the [Troubleshooting](./troubleshooting.mdx)
+If you hit any issues, check out the [Troubleshooting documentation](./troubleshooting.mdx)
 for common problems and solutions.
