--- a/docs/pages/desktop-access/troubleshooting.mdx
+++ b/docs/pages/desktop-access/troubleshooting.mdx
@@ -31,7 +31,7 @@ Smart Card"**.
 Usually, this means that the Smart Card service is not running on the target
 host.
 
-First, make sure that you [enable Smart Card service in Group
+First, make sure that you [enable the Smart Card service in Group
 Policy](./getting-started.mdx#step-2c-enable-the-smart-card-service).
 
 If that doesn't help, log into the target host directly, open the "Services"
@@ -75,7 +75,7 @@ This happens when the `windows_desktop_service` can't reach the target Windows
 host.
 
 First, make sure that you [open the RDP
-port](./getting-started.mdx#step-2d-open-firewall-rules-for-rdp) and [allow
+port](./getting-started.mdx#step-2d-open-firewall-to-inbound-rdp-connections) and [allow
 remote RDP connections in Group
 Policy](./getting-started.mdx#step-2b-allow-remote-rdp-connections).
 
