--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -28,7 +28,7 @@ This guide requires you to have:
 - LDAP credentials for Active Directory (usually the same credentials you use
   to log into the Domain Controller)
 - An existing Teleport cluster and user, version 8.0 or newer
-  - see [Teleport Getting Started](../getting-started.mdx) if you're new
+  - see [Teleport Getting Started](../getting-started.mdx) if you're new to Teleport
 - A Linux server to run the Teleport Desktop Access service on
   - you can reuse an existing server running any other Teleport instance
 
@@ -83,7 +83,7 @@ After updating `teleport.yaml`, start Teleport as usual using `teleport start`.
 {/* TODO: script this using PowerShell */}
 
 Next, we need to configure Active Directory to trust Teleport for user
-authentication and allow the mechanisms that Teleport uses under the hood
+authentication and allow the certificate-based mechanism that Teleport uses under the hood
 (smart cards).
 
 Get the Teleport CA certificate using `tctl auth export --type=windows >user-ca.cer`.
@@ -150,7 +150,7 @@ Computer Configuration > Policies > Windows Settings > Security Settings > Syste
 Double click on `Smart Card`, select `Define this policy setting` and switch to
 `Automatic`. Click "OK".
 
-### Step 2d. Open firewall rules for RDP
+### Step 2d. Open firewall to inbound RDP connections
 
 Finally, select:
 
@@ -173,10 +173,10 @@ On the left pane, select `Desktops`. You should see the list of all computers
 and Domain Controllers connected to your domain. Select one and click `CONNECT`
 on the right.
 
-A new tab will open and, after a few seconds, you should be logged into your
+A new tab will open and, after a few seconds, you should be logged in to your
 target Windows host.
 
 ## Troubleshooting
 
-If you hit any issues, check out the [Troubleshooting](./troubleshooting.mdx)
+If you hit any issues, check out the [Troubleshooting documentation](./troubleshooting.mdx)
 for common problems and solutions.
