corrected role example

--- a/docs/pages/enterprise/workflow/ssh-approval-slack.mdx
+++ b/docs/pages/enterprise/workflow/ssh-approval-slack.mdx
@@ -62,9 +62,9 @@ spec:
       - access-plugin
     rules:
       - resources: ['roles']
-        verbs: ['*'']
+        verbs: ['create','update','read','list','delete']
       - resources: ['user']
-        verbs: ['*']
+        verbs: ['create','update','read','list','delete']
 
 ```
   </TabItem>
