Address review feedback

--- a/docs/pages/desktop-access/reference.mdx
+++ b/docs/pages/desktop-access/reference.mdx
@@ -67,17 +67,17 @@ CLI commands related to Desktop Access.
 Generate a join token for Desktop Access service:
 
 ```sh
-tctl nodes add --roles=WindowsDesktop
+$ tctl nodes add --roles=WindowsDesktop
 ```
 
 List registered Desktop Access services:
 
 ```sh
-tctl get windows_desktop_service
+$ tctl get windows_desktop_service
 ```
 
 List registered Windows hosts in the domain:
 
 ```sh
-tctl get windows_desktop
+$ tctl get windows_desktop
 ```
