--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -1,13 +1,13 @@
 ---
-title: Desktop Access Getting Started
-description: Getting started with Teleport Desktop Access
+title: Getting Started With Desktop Access
+description: Connect Teleport to Active Directory and log into a Windows Desktop
 ---
 
 <Admonition
   type="warning"
   title="Warning"
 >
-  Desktop Access is currently in Beta. Do not use this feature for any critical
+  Desktop Access is currently in Preview. Do not use this feature for any critical
   infrastructure and keep a backup option for accessing your desktop hosts.
 </Admonition>
 
@@ -32,7 +32,7 @@ This guide requires you to have:
 - A Linux server to run the Teleport Desktop Access service on
   - you can reuse an existing server running any other Teleport instance
 
-## Step 1. Configure Teleport
+## Step 1/3. Configure Teleport
 
 <Admonition
   type="note"
@@ -77,7 +77,7 @@ windows_desktop_service:
 
 After updating `teleport.yaml`, start Teleport as usual using `teleport start`.
 
-## Step 2. Configure Group Policy to allow Teleport connections
+## Step 2/3. Configure Group Policy to allow Teleport connections
 
 {/* TODO: add screenshots */}
 {/* TODO: script this using PowerShell */}
@@ -94,7 +94,7 @@ Management". On the left pane, navigate to `$FOREST > Domains > $DOMAIN`,
 selecting your forest and domain names respectively. Right click on "Default
 Domain Policy" and select "Edit...".
 
-### Step 2a. Import Teleport CA
+### Import Teleport CA
 
 In the group policy editor, select:
 
@@ -105,7 +105,7 @@ Computer Configuration > Policies > Windows Settings > Security Settings > Publi
 Right click on `Trusted Root Certification Authorities` and select `Import`.
 Click through the wizard, selecting your CA file.
 
-### Step 2b. Allow remote RDP connections
+### Allow remote RDP connections
 
 Next, select:
 
@@ -138,7 +138,7 @@ Computer Configuration > Policies > Administrative Templates > Windows Component
 Right click `Require user authentication for remote connections by using
 Network Level Authentication`, edit, select **"Disable"** and "OK".
 
-### Step 2c. Enable the Smart Card service
+### Enable the Smart Card service
 
 Teleport performs certificate based authentication by emulating a smart card.
 To enable the smart card service, select:
@@ -162,7 +162,7 @@ Right click on `Inbound Rules` and select `New Rule...`. Under `Predefined`
 select `Remote Desktop`. Only select the rule for `User Mode (TCP-in)`. On the
 next screen, select `Allow the connection` and finish.
 
-## Step 3. Log in using Teleport
+## Step 3/3. Log in using Teleport
 
 {/* TODO: add screenshots */}
 
