--- a/docs/pages/desktop-access/introduction.mdx
+++ b/docs/pages/desktop-access/introduction.mdx
@@ -7,7 +7,7 @@ description: Teleport Desktop Access introduction and resources.
   type="warning"
   title="Warning"
 >
-  Desktop Access is currently in Beta. Do not use this feature for any critical
+  Desktop Access is currently in Preview. Do not use this feature for any critical
   infrastructure and keep a backup option for accessing your desktop hosts.
 
   Desktop Access Beta:
