--- a/docs/pages/desktop-access/troubleshooting.mdx
+++ b/docs/pages/desktop-access/troubleshooting.mdx
@@ -1,17 +1,15 @@
 ---
-title: Desktop Access troubleshooting
-description: Teleport Desktop Access troubleshooting guide.
+title: Troubleshooting Desktop Access
+description: Common issues and resolutions for Teleport's Desktop Access
 ---
 
 <Admonition
   type="warning"
   title="Warning"
 >
-  Desktop Access is currently in Beta. Do not use this feature for any critical
+  Desktop Access is currently in Preview. Do not use this feature for any critical
   infrastructure and keep a backup option for accessing your desktop hosts.
 </Admonition>
-
-# Desktop Access Troubleshooting
 
 Common issues and resolution steps.
 
