--- a/docs/pages/desktop-access/troubleshooting.mdx
+++ b/docs/pages/desktop-access/troubleshooting.mdx
@@ -30,7 +30,7 @@ Usually, this means that the Smart Card service is not running on the target
 host.
 
 First, make sure that you [enable the Smart Card service in Group
-Policy](./getting-started.mdx#step-2c-enable-the-smart-card-service).
+Policy](./getting-started.mdx#enable-the-smart-card-service).
 
 If that doesn't help, log into the target host directly, open the "Services"
 program from the "Start" menu and check that the "Smart Card" service is in the
@@ -51,7 +51,7 @@ authentication was not trusted"** (or similar).
 This means that the host does not trust the Teleport CA.
 
 First, make sure that you [import the Teleport CA into Group
-Policy](./getting-started.mdx#step-2a-import-teleport-ca). Note that if the
+Policy](./getting-started.mdx#import-teleport-ca). Note that if the
 Teleport CA was rotated since the last import, you will have to fetch the
 new CA using `tctl auth export --type=windows >user-ca.cer`
 
@@ -73,9 +73,9 @@ This happens when the `windows_desktop_service` can't reach the target Windows
 host.
 
 First, make sure that you [open the RDP
-port](./getting-started.mdx#step-2d-open-firewall-to-inbound-rdp-connections) and [allow
+port](./getting-started.mdx#open-firewall-to-inbound-rdp-connections) and [allow
 remote RDP connections in Group
-Policy](./getting-started.mdx#step-2b-allow-remote-rdp-connections).
+Policy](./getting-started.mdx#allow-remote-rdp-connections).
 
 If that does not help, check if the target host is online and try to `ping` it
 from the Linux server that runs `windows_desktop_service`. If the host is
