Be more explicit with regexp matching the beginning of the string

--- a/docs/pages/desktop-access/reference.mdx
+++ b/docs/pages/desktop-access/reference.mdx
@@ -52,10 +52,10 @@ windows_desktop_service:
   # matched against the host name. If multiple rules match, the desktop will
   # get the union of all matching labels.
   host_labels:
-  - match: '.*\.dev\.example\.com$'
+  - match: '^.*\.dev\.example\.com$'
     labels:
       environment: dev
-  - match: '.*\.prod\.example\.com$'
+  - match: '^.*\.prod\.example\.com$'
     labels:
       environment: prod
 ```
