fixed link, renamed img

--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -151,7 +151,7 @@ Double click on `Smart Card`, select `Define this policy setting` and switch to
 `Automatic`. Click "OK".
 
 <Figure align="left" bordered caption="Enable the Smart Card Service">
-  ![Enable Smartcard(../../img/desktop-access/smartcard.png)
+  ![Enable Smartcard](../../img/desktop-access/smartcard.png)
 </Figure>
 
 
