fileconf: change LDAP config from password to password_file
This approach avoids the need to put sensitive credentials in the
teleport config file, which is often shared for examples, testing
and troubleshooting purposes.

--- a/docs/pages/desktop-access/reference.mdx
+++ b/docs/pages/desktop-access/reference.mdx
@@ -45,9 +45,9 @@ windows_desktop_service:
     # likely "EXAMPLE". When connecting as the "Administrator" user, you should
     # use the format: "EXAMPLE\Administrator".
     username: '$LDAP_USERNAME'
-    # LDAP password for authentication. This is usually the same password you
-    # use to login to the Domain Controller.
-    password: '$LDAP_PASSWORD'
+    # Plain text file containing the LDAP password for authentication.
+    # This is usually the same password you use to login to the Domain Controller.
+    password_file: /var/lib/ldap-pass
   # Rules for applying labels to Windows hosts based on regular expressions
   # matched against the host name. If multiple rules match, the desktop will
   # get the union of all matching labels.
