--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -70,9 +70,9 @@ windows_desktop_service:
     # likely "EXAMPLE". When connecting as the "Administrator" user, you should
     # use the format: "EXAMPLE\Administrator".
     username: '$LDAP_USERNAME'
-    # LDAP password for authentication. This is usually the same password you
-    # use to login to the Domain Controller.
-    password: '$LDAP_PASSWORD'
+    # Plain text file containing the LDAP password for authentication.
+    # This is usually the same password you use to login to the Domain Controller.
+    password_file: /var/lib/ldap-pass
 ```
 
 After updating `teleport.yaml`, start Teleport as usual using `teleport start`.
