--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -51,7 +51,7 @@ following section in `teleport.yaml` on your Linux server:
 windows_desktop_service:
   enabled: yes
   # This is the address that windows_desktop_service will listen on.
-  listen_addr: "localhost:3028"
+  listen_addr: "0.0.0.0:3028"
   # (optional) This is the address that windows_desktop_service will advertise
   # to the rest of Teleport for incoming connections. Only proxy_service should
   # connect to windows_desktop_service, users connect to the proxy's web UI
